--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "This is the new staging version of the *Scrummable* blog. Refactored code based on nearnothing instead of _underscores to minimise the code-bloat. Tweaks to layout and code-block behind the scenes to improve accessibility, page load, and general performance. Because perf is all.",
   "main": "index.js",
   "scripts": {
-    "start": "node-sass ./style.scss ./style.css",
+    "start": "node-sass -w ./style.scss ./style.css",
     "test": "echo \"YOLO\" && exit 0"
   },
   "repository": {
