--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "node-sass -w ./style.scss ./style.css & babel ./js --watch --out-file ./app.js",
     "build": "npm run buildcss && echo \"Finished CSS\" && npm run buildjs && echo \"Finished JS\"",
     "buildcss": "node-sass ./style.scss ./style.css --output-style=compressed",
-    "buildjs": "babel ./js --out-file ./app.js --compact=true",
+    "buildjs": "babel ./js --out-file ./app.js --compact=true --presets=es2015",
     "test": "echo \"YOLO\" && exit 0"
   },
   "repository": {
@@ -22,6 +22,7 @@
     "node-sass": "^4.5.3"
   },
   "devDependencies": {
-    "babel-cli": "^6.24.1"
+    "babel-cli": "^6.24.1",
+    "babel-preset-latest": "^6.24.1"
   }
 }
