--- a/package.json
+++ b/package.json
@@ -4,10 +4,12 @@
   "description": "This is the new staging version of the *Scrummable* blog. Refactored code based on nearnothing instead of _underscores to minimise the code-bloat. Tweaks to layout and code-block behind the scenes to improve accessibility, page load, and general performance. Because perf is all.",
   "main": "index.js",
   "scripts": {
-    "start": "node-sass -w ./style.scss ./style.css & babel ./js --watch --out-file ./app.js",
+    "start": "concurrently --kill-others \"npm run watchcss\" \"npm run watchjs\"",
+    "watchcss": "node-sass -w ./style.scss ./style.css",
+    "watchjs": "babel ./js --watch --out-file ./app.js",
     "build": "npm run buildcss && echo \"Finished CSS\" && npm run buildjs && echo \"Finished JS\"",
     "buildcss": "node-sass ./style.scss ./style.css --output-style=compressed",
-    "buildjs": "babel ./js --out-file ./app.js --compact=true --presets=es2015 --no-comments",
+    "buildjs": "eslint ./js/main.js && babel ./js --out-file ./app.js --compact=true --presets=es2015 --no-comments",
     "test": "echo \"YOLO\" && exit 0"
   },
   "repository": {
@@ -23,6 +25,14 @@
   },
   "devDependencies": {
     "babel-cli": "^6.24.1",
-    "babel-preset-latest": "^6.24.1"
+    "babel-eslint": "^8.2.1",
+    "babel-preset-latest": "^6.24.1",
+    "eslint": "^4.17.0",
+    "eslint-config-prettier": "^2.9.0",
+    "eslint-config-universal": "^1.1.0",
+    "eslint-plugin-babel": "^4.1.2",
+    "eslint-plugin-html": "^4.0.2",
+    "eslint-plugin-react": "^7.6.1",
+    "node-sass": "^4.7.2"
   }
 }
