--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
   "license": "ISC",
   "homepage": "https://bitbucket.org/thomasxbanks/scrummable-2016-theme#readme",
   "dependencies": {
-    "node-sass": "^4.5.3"
+    "concurrently": "^3.5.1"
   },
   "devDependencies": {
     "babel-cli": "^6.24.1",
@@ -33,6 +33,6 @@
     "eslint-plugin-babel": "^4.1.2",
     "eslint-plugin-html": "^4.0.2",
     "eslint-plugin-react": "^7.6.1",
-    "node-sass": "^4.7.2"
+    "node-sass": "^4.9.0"
   }
 }
